--- a/chat.html
+++ b/chat.html
@@ -9,7 +9,7 @@
 <body>
     
     <header class="chatheader">
-        <h1 class="logo">TeleMax</h1>
+        <a href="index.html" class="logo">TeleMax</a>
         <div class="links">
             <a href="#">Para sua casa</a>
             <a href="#">Para sua empresa</a>
