--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="icons/whatsapp.png" alt="">
     </a>
     <header>
-        <h1 class="logo">TeleMax</h1>
+        <a href="index.html" class="logo">TeleMax</a>
         <div class="links">
             <a href="#">Para sua casa</a>
             <a href="#">Para sua empresa</a>
@@ -101,7 +101,7 @@
                     </div><!--especificacao-single-->
                 </div><!--especificacoes-->
 
-                <h2 class="preco"><b>R$ 79,90</b> / mês</h2>
+                <h2 class="preco"><b>R$ 109,90</b> / mês</h2>
 
                 <a href="chat.html">Eu Quero!</a>
 
@@ -131,7 +131,7 @@
                     </div><!--especificacao-single-->
                 </div><!--especificacoes-->
 
-                <h2 class="preco"><b>R$ 79,90</b> / mês</h2>
+                <h2 class="preco"><b>R$ 149,90</b> / mês</h2>
 
                 <a href="chat.html">Eu Quero!</a>
 
