--- a/chat.html
+++ b/chat.html
@@ -29,7 +29,7 @@
                 </p>
 
             </div><!--responses-->
-            <input type="text" placeholder="Digite sua mensagen aqui ..." id="input">
+            <input type="text" placeholder="Digite sua mensagem aqui ..." id="input">
         </main>
 
     </div><!--container-->
